# Exegol-history

./: .gitignore  README.md  WIKI.md  devbox.json  exegol-history.py  exegol-history.sh  profile.sh  pyproject.toml  requirements.txt
.github/workflows/: entrypoint.yml  format-and-lint.yml  lint-and-test.yml  lint.yml  sub_compatibility.yml  sub_lint.yml  sub_test.yml  sub_testing.yml
exegol_history/: __main__.py  profile.sh
exegol_history/cli/: arguments.py  functions.py  utils.py
exegol_history/config/: config.py  config.toml  profile.ps1  profile.sh
exegol_history/connectors/msf/: utils.py
exegol_history/connectors/nxc/: nxc_workspace_syncer.py
exegol_history/db_api/: creds.py  exporting.py  formatter.py  hosts.py  importing.py  utils.py
exegol_history/tests/: common.py  conftest.py
exegol_history/tests/artifacts/: config.toml  creds.json  creds_colon.csv  creds_comma.csv  hosts.json  hosts_colon.csv  hosts_comma.csv  import.kdbx  import.key  msf.txt  pypykatz.json  secretsdump.dsv
exegol_history/tests/cli_tests/: conftest.py  test_add_credential.py  test_add_credential_cli.py  test_add_host.py  test_add_host_cli.py  test_delete_credential.py  test_delete_credential_cli.py  test_delete_host.py  test_delete_host_cli.py  test_edit_credential.py  test_edit_credential_cli.py  test_edit_host.py  test_edit_host_cli.py  test_export_credential_cli.py  test_export_host_cli.py  test_import_credential_cli.py  test_import_host_cli.py  test_show_credential_cli.py  test_show_host_cli.py  test_sync_cli.py  test_unset_credential_cli.py  test_unset_host_cli.py
exegol_history/tui/: db_creds.py  db_hosts.py
(+42 files in other folders)
