[tool.poetry]
name = "exegol-history"
version = "1.0"
description = "exegol-history is a TUI to manage compromised credentials and hosts during an engagement."
authors = ["lap1nou"]

[tool.poetry.dependencies]
python = "^3.10"
rich  = "^13.9.2"
textual = "^2.1.2"
pykeepass = "^4.1.0.post1"

[tool.poetry.scripts]
exegol-history="exegol_history.__main__:main"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.4"
pytest-asyncio = "0.25.2"
textual-dev = "1.7.0"

[tool.ruff.lint.extend-per-file-ignores]
"exegol_history/tests/*" = ["F811"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
